--- a/pages/customers.html
+++ b/pages/customers.html
@@ -27,7 +27,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav" id="nav-bar-tags">
-                            <a class="Home" href="../home.html#home">Home</a>
+                            <a class="Home" href="../index.html#home">Home</a>
                             <a class="Orders" href="orders.html#orders">Orders</a>
                             <a class="current-page-button" href="#customers">Customers</a>
                             <a class="Items" href="items.html#items">Items</a>
